k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gmp-frontend
  namespace: gmp-staging
  labels:
    run: gmp-frontend
spec:
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app:  gmp-frontend
