k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gmp-frontend
  namespace: gmp-staging
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: "gmp-frontend.k3s.bangun-kreatif.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gmp-frontend
                port:
                  number: 5000
  tls:
    - hosts:
        - "gmp-frontend.k3s.bangun-kreatif.com"
      secretName: gmp-frontend-k3s-bangun-kreatif-com-tls
